--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,23 @@
 .black {
 	max-width: 50%;
-	margin-left: 100px;
-
-
+	margin-left: 25%;
 }
 .color-photo{
 	max-width: 50%;
-	margin-left: 100px;
+	margin-left: 25%;
 }
 
 .color-btn{
 	font-size: 3em;
-	padding: 20px;
 }
 .color-btn-div{
 	margin-left: 100px;
+    margin-right: 100px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.header_center{
+	display: flex;
+    justify-content: center;
 }
